fixed navbar on firefox

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -74,10 +74,6 @@
     font-size: 24px;
 }
 
-ul li.nav-item {
-    position: relative;
-}
-
 @media (max-width: 991px) {
     .nav-desc {
         font-size: 0.9rem;
